[gd_scene load_steps=2 format=3 uid="uid://cht85bf61nf4q"]

[ext_resource type="Script" path="res://addons/dialogsystem/graph_editor/graph/graph_menu.gd" id="1_f57ov"]

[node name="GraphMenu" type="Popup"]
size = Vector2i(125, 124)
visible = true
wrap_controls = false
unresizable = false
min_size = Vector2i(125, 124)
script = ExtResource("1_f57ov")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 6.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Start" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Text" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Text"

[node name="Branch" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Branch"

[node name="End" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "End"

[connection signal="pressed" from="Panel/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Text" to="." method="_on_text_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Branch" to="." method="_on_branch_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/End" to="." method="_on_end_pressed"]
